--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,13 @@
 
 # misc
 .DS_Store
-.env
+server/.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # Environment Variables
-.env
+server/.env
 .env.build
 
 # Project exclude paths
