--- a/package.json
+++ b/package.json
@@ -7,16 +7,43 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "3.0.0",
     "@reach/router": "^1.2.1",
     "@zeit/next-typescript": "^1.1.1",
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-datasource": "^0.1.3",
+    "apollo-datasource-rest": "^0.6.1",
+    "apollo-link-http": "^1.5.15",
+    "apollo-server": "2.6.1",
+    "apollo-server-testing": "2.6.1",
+    "emotion": "^9.2.12",
+    "firebase": "^6.4.2",
+    "firebase-admin": "^8.4.0",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
+    "isemail": "^3.1.3",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.2",
+    "next-apollo": "^3.1.1",
     "next-plugin-graphql": "^0.0.2",
-    "prettier": "^1.18.2"
+    "next-with-apollo": "latest",
+    "polished": "^3.4.1",
+    "prettier": "^1.18.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-emotion": "^9.2.12"
   },
-  "devDependencies": {},
-  "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ]
+  "devDependencies": {
+    "@apollo/react-testing": "3.0.0",
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.7",
+    "@types/react": "^16.9.2",
+    "apollo": "^2.16.3",
+    "apollo-link": "^1.2.3",
+    "jest": "^23.6.0",
+    "nock": "^10.0.2",
+    "node-fetch": "^2.2.1"
+  },
+  "private": true
 }
