--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.2",
     "next-apollo": "^3.1.1",
+    "next-images": "^1.1.2",
     "next-plugin-graphql": "^0.0.2",
     "next-with-apollo": "latest",
     "polished": "^3.4.1",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-emotion": "^9.2.12"
+    "react-emotion": "^9.2.12",
+    "apollo-server-lambda": "latest",
+    "apollo-server-micro": "latest"
   },
   "devDependencies": {
     "@apollo/react-testing": "3.0.0",
